--- a/.github/workflows/graphql.yml
+++ b/.github/workflows/graphql.yml
@@ -15,6 +15,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
 #       - uses: actions/checkout@v3
 
+      - run: |
+          cat '${{ github.event_path }}'
+
       - name: 'TEST: Post discussion comment'
         env:
           DISCUSSION_NUMBER: 1
